Twenty Fourteen: add archive page templates, fix alignment bugs for archive headers, and use `content-none.php` for consistency. Props obenland, fixes #25181. Built from https://develop.svn.wordpress.org/trunk@25213
git-svn-id: http://core.svn.wordpress.org/trunk@25184 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/rtl.css
+++ b/wp-content/themes/twentyfourteen/rtl.css
@@ -551,6 +551,7 @@ img.alignleft,
 		margin: 0 12.5% 0 8.03571428%;
 	}
 
+	.archive-header,
 	.page-header {
 		margin: 0 12.5% 24px 8.03571428%;
 		margin: 0 12.5% 2.4rem 8.03571428%;
@@ -788,6 +789,7 @@ img.alignleft,
 		padding-left: 0;
 	}
 
+	.archive-header,
 	.page-header {
 		margin: 0 12.5% 24px 8.03571428%;
 		margin: 0 12.5% 2.4rem 8.03571428%;
